# personal-assistant-petproject

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  config.py  handler.py  main.py  pre-commit  pyproject.toml
database/: __init__.py  database.py  models.py  schemas.py  services.py
